[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Ladder/Ladder.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/1bitplat_mono_trans_packed.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[node name="Ladder" type="Node2D"]
script = ExtResource( 1 )

[node name="RefSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true

[node name="Tween" type="Tween" parent="."]

[node name="HAnchor_L" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 18, 96, 4, 16 )

[node name="HAnchor_R" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 26, 96, 4, 16 )

[node name="VAnchor" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 96, 16, 16 )

[node name="Area" type="Area2D" parent="."]

[node name="ColShape" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_tween_all_completed"]
[connection signal="body_entered" from="Area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_body_exited"]
